--- a/css/tabs.css
+++ b/css/tabs.css
@@ -1,76 +1,77 @@
 /* 
     Created on : Nov 18, 2014, 4:31:01 PM
     Author     : cscrivo
-*/
 	      
-	      .tabs input[type=radio] {
-	          position: absolute;
-	          top: -9999px;
-	          left: -9999px;
-	      }
-	      .tabs {
-	        width: 350px;
-	        float: none;
-	        list-style: none;
-	        position: relative;
-	        padding: 0;
-	        margin: 105px auto;
-	      }
-	      .tabs li{
-	        float: left;
-	      }
-	      .tabs label {
-	          display: block;
-	          padding: 5px 5px;
-	          border-radius: 2px 2px 0 0;
-	          color: #08C;
-	          font-size: 13px;
-	          font-weight: normal;
-	          font-family: helvetica;
-	          //background: rgba(255,255,255,0.2);
-	          cursor: pointer;
-	          position: relative;
-	          top: 3px;
-	          -webkit-transition: all 0.2s ease-in-out;
-	          -moz-transition: all 0.2s ease-in-out;
-	          -o-transition: all 0.2s ease-in-out;
-	          transition: all 0.2s ease-in-out;
-	      }
-	      .tabs label:hover {
-	        background: rgba(255,255,255,0.5);
-	        top: 0;
-	      }
-	      
-	      [id^=tab]:checked + label {
-	        background: #fff;
-	        color: #08C;
-                border-left: solid 2px #08C;
-                border-right: solid 2px #08C;
-                border-top: solid 2px #08C;
-	        top: 0;
-	      }
-	      
-	      [id^=tab]:checked ~ [id^=tab-content] {
-	          display: block;
-	      }
-	      .tab-content{
-	        z-index: 2;
-	        display: none;
-	        text-align: left;
-	        width: 100%;
-	        font-size: 15px;
-	        line-height: 100%;
-	        padding-top: 10px;
-	        background: #fff;
-                border: solid 0px #08C;
-	        padding: 15px;
-	        color: #08C;
-	        position: absolute;
-	        top: 53px;
-	        left: 0;
-	        box-sizing: border-box;
-	        -webkit-animation-duration: 0.5s;
-	        -o-animation-duration: 0.5s;
-	        -moz-animation-duration: 0.5s;
-	        animation-duration: 0.5s;
-	      }
+    .tabs input[type=radio] {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+    */
+    .tabs {
+      width: 350px;
+      float: none;
+      list-style: none;
+      position: relative;
+      padding: 0;
+      margin: 205px auto;
+    }
+    .tabs li{
+      float: left;
+    }
+    .tabs label {
+        margin-left:12px;
+        display: block;
+        padding: 5px 5px;
+        border-radius: 2px 2px 0 0;
+        color: #08C;
+        font-size: 13px;
+        font-weight: normal;
+        font-family: helvetica;
+        //background: rgba(255,255,255,0.2);
+        //cursor: pointer;
+        position: relative;
+        top: 2px;
+        //-webkit-transition: all 0.2s ease-in-out;
+        //-moz-transition: all 0.2s ease-in-out;
+        //-o-transition: all 0.2s ease-in-out;
+        //transition: all 0.2s ease-in-out;
+    }
+    .tabs label:hover {
+      background: rgba(255,255,255,0.5);
+      top: 0;
+    }
+
+    [id^=tab]:checked + label {
+      background: #fff;
+      color: #08C;
+      border-left: solid 2px #08C;
+      border-right: solid 2px #08C;
+      border-top: solid 2px #08C;
+      top: 0;
+    }
+
+    [id^=tab]:checked ~ [id^=tab-content] {
+        display: block;
+    }
+    .tab-content{
+      z-index: 2;
+      display: none;
+      text-align: left;
+      width: 100%;
+      font-size: 15px;
+      line-height: 100%;
+      padding-top: 10px;
+      background: #fff;
+      border: solid 0px #08C;
+      padding: 15px;
+      color: #08C;
+      position: absolute;
+      top: -153px;
+      left: 0;
+      box-sizing: border-box;
+      //-webkit-animation-duration: 0.5s;
+      //-o-animation-duration: 0.5s;
+      //-moz-animation-duration: 0.5s;
+      //animation-duration: 0.5s;
+    }
