Changes to OOP structure to adhere to best practices

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Custom Stylesheet */
+/* Custom Stylesheet 
 body, html {
     height: 100%;
     margin: 0;
@@ -9,12 +9,12 @@ body, html {
     font-family: helvetica;
 }
 
-/* Tabs Demo 1 */
 .tabs input[type=radio] {
     position: absolute;
     top: -9999px;
     left: -9999px;
 }
+/*
 .tabs {
   width: 650px;
   float: none;
@@ -76,4 +76,4 @@ body, html {
   -o-animation-duration: 0.5s;
   -moz-animation-duration: 0.5s;
   animation-duration: 0.5s;
-}
+}*/
